--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from leta.artrow.net/blacktheme/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Sep 2019 09:26:01 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>LETA - Vcard Template</title>
-
+    <title>CV - Taufik Agung Santoso</title>
     <meta name="description" content="Vcard Template">
     <meta name="author" content="ArtRow">
-
     <link rel="shortcut icon" href="images/fav.png" type="image/png">
-
     <link rel="stylesheet" href="css/main.css" media="screen">
     <link rel="stylesheet" href="css/flexslider.css" media="screen">
     <link rel="stylesheet" href="css/fancybox-dark.css" media="screen">
-
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-    
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
-    <!-- <script src="js/modernizr.custom.js"></script> - Uncomment for using 3D portfolio. For more info see documentation -->
     <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
-
 </head>
-
     <body>
-
         <audio><source src="../audio/sound.mp3"/></audio>
-
         <!-- Main Content -->
         <div id="content-wrapper">
-
             <!-- Logo Demo -->
-            <a href="../index-2.html" id="demo-logo">
+            <a href="../index.html" id="demo-logo">
                 <img src="images/demo-logo.png" alt="" />
             </a><!-- /Logo Demo -->
-
             <!-- ABOUTME -->
             <div id="aboutme">
 
@@ -518,7 +502,7 @@
     <script src="js/jquery.infieldlabel.min.js"></script>
     <script src="js/gmap3.min.js"></script>
     <script src="js/contact.js"></script>
-    <script src="js/settings.js"></script>  
+    <script src="js/settings.js"></script>
 
     </body>
 
