--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -21,7 +21,7 @@
         <div id="content-wrapper">
             <!-- Logo Demo -->
             <a href="../index.html" id="demo-logo">
-                <img src="images/demo-logo.png" alt="" />
+                <img src="../images/demo-logo.png" alt="" />
             </a><!-- /Logo Demo -->
             <!-- ABOUTME -->
             <div id="aboutme">
@@ -30,13 +30,13 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                                <img src="images/photocontent/slider_photo_01.jpg" alt="" />
+                                <img src="../images/photocontent/slider_photo_01.jpg" alt="" />
                                 </li>
                             <li>
-                                <img src="images/photocontent/slider_photo_02.jpg" alt="" />
+                                <img src="../images/photocontent/slider_photo_02.jpg" alt="" />
                             </li>
                             <li>
-                                <img src="images/photocontent/slider_photo_03.jpg" alt="" />
+                                <img src="../images/photocontent/slider_photo_03.jpg" alt="" />
                             </li>
                         </ul>
                     </div>
@@ -44,7 +44,7 @@
 
                 <div class="about-wrapper">
                     <div class="title">
-                        <h1>Johnny Doe</h1>
+                        <h1>Taufik Agung Santoso</h1>
                         <h5>GRAPHIC & WEB DESIGNER</h5>
                     </div>
                     <div class="download-card"><!-- Button Download vCard -->
@@ -61,7 +61,7 @@
 
                                 <div class="info-slide-item"><!-- 1 -->
                                     <div class="top-border-red">
-                                        <p>Hi, my name is Johnny Doe.<br>Entire summary information you can find on this page. Feel free to take a look around my vCard and don't forget to see the White Edition. Thanks.</p>
+                                        <p>Hi, my name is Taufik Agung Santoso.<br>Entire summary information you can find on this page. Feel free to take a look around my vCard and don't forget to see the White Edition. Thanks.</p>
                                     </div>
                                 </div>
 
@@ -69,7 +69,7 @@
                                     <div class="top-border-blue">
                                         <div class="left-column">
                                             <ul class="main-info-list">
-                                                <li>Name<span>Johnny Doe</span></li>
+                                                <li>Name<span>Taufik Agung Santoso</span></li>
                                                 <li>Birthday<span>January 31, 1986</span></li>
                                                 <li>Address<span>New York City, United States</span></li>
                                             </ul>
@@ -118,7 +118,7 @@
             <div id="nav">
 
                 <div id="logo">
-                    <h2>Johnny Doe</h2>
+                    <h2>Taufik Agung Santoso</h2>
                 </div>
 
                 <ul class="etabs">
@@ -160,7 +160,7 @@
                         <h2>My Card</h2>
                         <img src="images/photocontent/about_photo.jpg" alt="">
                         <ul class="main-info-list">
-                            <li>Name<span>Johnny Doe</span><div class="floatlimit"></div></li>
+                            <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
                             <li>Birthday<span>January 31, 1986</span><div class="floatlimit"></div></li>
                             <li>Address<span>New York City, United States</span><div class="floatlimit"></div></li>
                             <li>Phone<span>+0 (123) 456 789</span><div class="floatlimit"></div></li>
@@ -462,7 +462,7 @@
 
             <!-- FOOTER -->
             <div class="footer">
-                <div class="left-column"><p>ArtRow, Copyright © 2014</p></div>
+                <div class="left-column"><p>Re-Design By : Taufik Agung Santoso</p></div>
                 <div class="right-column">
 
                     <div class="social"><!-- Social icons -->
