--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div id="nav">
 
         <div id="logo">
-          <h2>Johnny Doe</h2>
+          <h2>Taufik Agung Santoso</h2>
         </div>
 
         <ul class="etabs">
@@ -158,7 +158,7 @@
             <h2>My Card</h2>
             <img src="images/photocontent/about_photo.jpg" alt="" width="230px" height="350">
             <ul class="main-info-list">
-              <li>Name<span>Johnny Doe</span><div class="floatlimit"></div></li>
+              <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
               <li>Birthday<span>January 31, 1986</span><div class="floatlimit"></div></li>
               <li>Address<span>New York City, United States</span><div class="floatlimit"></div></li>
               <li>Phone<span>+0 (123) 456 789</span><div class="floatlimit"></div></li>
