--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -70,8 +70,8 @@
                                         <div class="left-column">
                                             <ul class="main-info-list">
                                                 <li>Name<span>Taufik Agung Santoso</span></li>
-                                                <li>Birthday<span>January 31, 1986</span></li>
-                                                <li>Address<span>New York City, United States</span></li>
+                                                <li>Birthday<span>17 Maret 1998</span></li>
+                                                <li>Address<span>Musi Rawas, Indonesia</span></li>
                                             </ul>
                                         </div>
                                         <div class="right-column">
@@ -99,7 +99,7 @@
                                     <div class="top-border-yellow">
                                         <div class="mini-location">
                                             <div class="mini-icon-pin"></div>
-                                            <div class="mini-location-text">New York City, United States</div>
+                                            <div class="mini-location-text">Musi Rawas, Indonesia</div>
                                         </div>
                                     </div>
                                 </div>
@@ -161,8 +161,8 @@
                         <img src="images/photocontent/about_photo.jpg" alt="">
                         <ul class="main-info-list">
                             <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
-                            <li>Birthday<span>January 31, 1986</span><div class="floatlimit"></div></li>
-                            <li>Address<span>New York City, United States</span><div class="floatlimit"></div></li>
+                            <li>Birthday<span>17 Maret 1998</span><div class="floatlimit"></div></li>
+                            <li>Address<span>Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
                             <li>Phone<span>+0 (123) 456 789</span><div class="floatlimit"></div></li>
                             <li>Email<span>mymail@mail.com</span><div class="floatlimit"></div></li>
                             <li>Website<span>www.mysite.com</span><div class="floatlimit"></div></li>
@@ -170,7 +170,7 @@
                         <a class="button"><!-- Button Download vCard -->
                             <div class="button-big button-blue">
                                 <div class="button-anim"></div>
-                                <div class="button-big-label">Download vCard</div>
+                                <!-- <div class="button-big-label">Download vCard</div> -->
                             </div>
                         </a>
                     </div>
