--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="top-border-yellow">
                     <div class="mini-location">
                       <div class="mini-icon-pin"></div>
-                      <div class="mini-location-text">New York City, United States</div>
+                      <div class="mini-location-text">Musi Rawas, Indonesia</div>
                     </div>
                   </div>
                 </div>
@@ -159,8 +159,8 @@
             <img src="images/photocontent/about_photo.jpg" alt="" width="230px" height="350">
             <ul class="main-info-list">
               <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
-              <li>Birthday<span>January 31, 1986</span><div class="floatlimit"></div></li>
-              <li>Address<span>New York City, United States</span><div class="floatlimit"></div></li>
+              <li>Birthday<span>17 Maret 1998</span><div class="floatlimit"></div></li>
+              <li>Address<span>Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
               <li>Phone<span>+0 (123) 456 789</span><div class="floatlimit"></div></li>
               <li>Email<span>mymail@mail.com</span><div class="floatlimit"></div></li>
               <li>Website<span>www.mysite.com</span><div class="floatlimit"></div></li>
@@ -437,7 +437,7 @@
           <div class="social"><!-- Social icons -->
             <ul>
               <li class="twitter">
-                <a><div class="icon-twitter"></div></a>
+                <a href="https://twitter.com/taufikid7" target="_blank"><div class="icon-twitter"></div></a>
               </li>
               <li class="facebook">
                 <a><div class="icon-facebook"></div></a>
