--- a/index.html
+++ b/index.html
@@ -159,18 +159,10 @@
             <img src="images/photocontent/about_photo.jpg" alt="" width="230px" height="350">
             <ul class="main-info-list">
               <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
-              <li>Birthday<span>17 Maret 1998</span><div class="floatlimit"></div></li>
+              <li>TTL<span>Jajaran Baru 17 Maret 1998</span><div class="floatlimit"></div></li>
               <li>Address<span>Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
-              <li>Phone<span>+0 (123) 456 789</span><div class="floatlimit"></div></li>
-              <li>Email<span>mymail@mail.com</span><div class="floatlimit"></div></li>
-              <li>Website<span>www.mysite.com</span><div class="floatlimit"></div></li>
+              <li>Phone<span>+62 853 5703 7093</span><div class="floatlimit"></div></li>
             </ul>
-            <a class="button"><!-- Button Download vCard -->
-              <div class="button-big button-blue">
-                <div class="button-anim"></div>
-                <div class="button-big-label">Download vCard</div>
-              </div>
-            </a>
             <div class="paper-clip"></div>
           </div>
           <div class="substrate">
@@ -201,14 +193,15 @@
 
         <div class="right-column">
           <div class="substrate gradient-blue font-blue">
-            <h2>About Me</h2>
-            <h3>Hi, My name is John...</h3>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <h2>Tentang Saya</h2>
+            <h3>السَّلاَمُ عَلَيْكُمْ وَرَحْمَةُ اللهِ وَبَرَكَاتُه</h3>
+            <p>Bismillahirrahmanirrahim, perkenalkan nama saya Taufik Agung Santoso. saya adalah mahasiswa informatika institut teknologi sumatera angkatan 2016.</p>
+            <p>Saya adalah anak pertama dari 2 bersaudara, berlatar belakang keluarga petani yang bercita - cita menjadi engineer informatika yang membanggakan bangsa.</p>
           </div>
           <div class="substrate">
             <h2>Employment</h2>
             <div class="left-blue">
-              <div class="time-period-left-blue"></div><!-- Keep empty. This class used for creating a point on the line. Use "time-period-right-***".-->
+              <div class="time-period-left-blue"></div>
               <h3>Designer<span class="time-period-right-blue">2011 - 2012</span></h3>
               <h4>Some information</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
@@ -440,19 +433,13 @@
                 <a href="https://twitter.com/taufikid7" target="_blank"><div class="icon-twitter"></div></a>
               </li>
               <li class="facebook">
-                <a><div class="icon-facebook"></div></a>
-              </li>
-              <li class="vimeo">
-                <a><div class="icon-vimeo"></div></a>
+                <a href="https://www.facebook.com/taufikagungsantoso" target="_blank"><div class="icon-facebook"></div></a>
               </li>
               <li class="instagram">
-                <a><div class="icon-instagram"></div></a>
+                <a href="https://www.instagram.com/taufikagungsantoso" target="_blank"><div class="icon-instagram"></div></a>
               </li>
               <li class="linkedin">
-                <a><div class="icon-linkedin"></div></a>
-              </li>
-              <li class="pinterest">
-                <a><div class="icon-pinterest"></div></a>
+                <a href="https://www.linkedin.com/in/taufik-agung-santoso-b893b7179" target="_blank"><div class="icon-linkedin"></div></a>
               </li>
             </ul>
           </div><!-- /Social icons -->
