--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <form action="#" id="contactform" class="animform"><!-- Contact form -->
               <ul>
                 <li>
-                  <label for="name" class="flabel">Name</label>
+                  <label for="name" class="flabel">Nama</label>
                   <input type="text" name="name" value="" id="name" />
                   <div class="indicate-name"></div>
                 </li>
@@ -388,12 +388,12 @@
                   <div class="indicate-email"></div>
                 </li>
                 <li>
-                  <label for="message" class="flabel">Enter your message</label>
+                  <label for="message" class="flabel">Pesan</label>
                   <textarea name="message" cols="88" rows="6" id="message"></textarea>
                   <div class="indicate-message"></div>
                 </li>
                 <li>
-                  <button type="submit" name="submit" value="Send your message" class="submit">Send your message</button>
+                  <button type="submit" name="submit" value="Send your message" class="submit">Kirim</button>
                 </li>
               </ul>
             </form><!-- /Contact form -->
