--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
 
         <div class="left-column">
           <div class="substrate">
-            <h2>My Card</h2>
+            <h2>Kartu Identitas</h2>
             <img src="images/photocontent/about_photo.jpg" alt="" width="230px" height="350">
             <ul class="main-info-list">
               <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
               <li>TTL<span>Jajaran Baru 17 Maret 1998</span><div class="floatlimit"></div></li>
-              <li>Address<span>Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
-              <li>Phone<span>+62 853 5703 7093</span><div class="floatlimit"></div></li>
+              <li>Alamat<span>Jajaran Baru Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
+              <li>HP<span>+62 853 5703 7093</span><div class="floatlimit"></div></li>
             </ul>
             <div class="paper-clip"></div>
           </div>
@@ -307,7 +307,7 @@
                   <div class="thumb-name">Title</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_02.jpg" alt=""/>
+              <img src="images/photocontent/portfolio_thumb_02fsdf.jpg" alt=""/>
             </li>
 
             <li class="f-photo view">
@@ -406,13 +406,13 @@
             <h2>My Location</h2>
             <div id="map"></div><!-- GMAP -->
             <div class="map-pan">
-              <div class="div-info pan pan-active" data-lat="36.143247" data-lng="-115.160151">
+              <div class="div-info pan pan-active" data-lat="-2.987731" data-lng="103.025159">
                 <div class="thumb-icon-gmap"></div>
-                <div class="thumb-name">My Address</div>
+                <div class="thumb-name">Alamat</div>
               </div>
-              <div class="div-info pan" data-lat="36.149762" data-lng="-115.152726">
+              <div class="div-info pan" data-lat="-5.358107" data-lng="105.314862">
                 <div class="thumb-icon-gmap"></div>
-                <div class="thumb-name">My Office, Las Vegas, NV 01234</div>
+                <div class="thumb-name">Kampus, Institut Teknologi Sumatera</div>
               </div>
             </div>
           </div>
