update portofolio web

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <a href="#" class="button current"  data-filter="*">
                 <div class="button-small button-green">
                   <div class="button-anim-border"></div>
-                  <div class="button-small-label">All</div>
+                  <div class="button-small-label">Semua</div>
                 </div>
               </a>
             </li>
@@ -258,7 +258,7 @@
               <a href="#" class="button" data-filter=".f-photo">
                 <div class="button-small button-green">
                   <div class="button-anim-border"></div>
-                  <div class="button-small-label">Photos</div>
+                  <div class="button-small-label">Website</div>
                 </div>
               </a>
             </li>
@@ -291,13 +291,63 @@
           <ul id="portfolio-content" class="top-border-green"><!-- Portfolio Content --><!-- See Documentation for more info -->
 
             <li class="f-photo view">
-              <a href="images/photocontent/portfolio_01.jpg" class="fancybox" rel="group" title="Pepper Summer by `Artgerm">
+              <img src="images/photocontent/portfolio_thumb_01.jpg" alt="">
+              <a href="images/photocontent/portfolio_01.jpg" class="fancybox" rel="group" title="Siranap">
                 <div class="div-info">
                   <div class="thumb-icon-photo"></div>
-                  <div class="thumb-name">Pepper Summer</div>
+                  <div class="thumb-name">Sistem informasi rawat inap</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_01.jpg" alt="">
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_06.jpg" alt=""/>
+              <a href="images/photocontent/portfolio_06.jpg" class="fancybox" rel="group" title="Comptech">
+                <div class="div-info">
+                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-name">Comptech 1</div>
+                </div>
+              </a>
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_03.jpg" alt=""/>
+              <a href="images/photocontent/portfolio_03.jpg" class="fancybox" rel="group" title="Pariwisata Lampung">
+                <div class="div-info">
+                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-name">Pariwisata Lampung</div>
+                </div>
+              </a>
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_07.jpg" alt=""/>
+              <a href="images/photocontent/portfolio_07.jpg" class="fancybox" rel="group" title="Karir Center">
+                <div class="div-info">
+                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-name">Career Center ITERA</div>
+                </div>
+              </a>
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_08.jpg" alt=""/>
+              <a href="images/photocontent/portfolio_08.jpg" class="fancybox" rel="group" title="Smart DC">
+                <div class="div-info">
+                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-name">Smart DC</div>
+                </div>
+              </a>
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_09.jpg" alt=""/>
+              <a href="images/photocontent/portfolio_09.jpg" class="fancybox" rel="group" title="Manajemen TA GEOFISIKA">
+                <div class="div-info">
+                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-name">MtaGeo</div>
+                </div>
+              </a>
             </li>
 
             <li class="f-video f-youtube view">
@@ -307,17 +357,7 @@
                   <div class="thumb-name">Title</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_02fsdf.jpg" alt=""/>
-            </li>
-
-            <li class="f-photo view">
-              <a href="images/photocontent/portfolio_03.jpg" class="fancybox" rel="group" title="Pepper Freedom by `Artgerm">
-                <div class="div-info">
-                  <div class="thumb-icon-photo"></div>
-                  <div class="thumb-name">Pepper Freedom</div>
-                </div>
-              </a>
-              <img src="images/photocontent/portfolio_thumb_03.jpg" alt=""/>
+              <img src="images/photocontent/portfolio_thumb_02.jpg" alt=""/>
             </li>
 
             <li class="f-video f-youtube view">
@@ -338,16 +378,6 @@
                 </div>
               </a>
               <img src="images/photocontent/portfolio_thumb_05.jpg" alt=""/>
-            </li>
-
-            <li class="f-photo view">
-              <a href="images/photocontent/portfolio_06.jpg" class="fancybox" rel="group" title="Three Kingdoms - Xiao Qiao by `Artgerm">
-                <div class="div-info">
-                  <div class="thumb-icon-photo"></div>
-                  <div class="thumb-name">Three Kingdoms - Xiao Qiao</div>
-                </div>
-              </a>
-              <img src="images/photocontent/portfolio_thumb_06.jpg" alt=""/>
             </li>
 
           </ul><!-- /Portfolio Content -->
