--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <a href="#" class="button" data-filter=".f-vimeo">
                 <div class="button-small button-green">
                   <div class="button-anim-border"></div>
-                  <div class="button-small-label">Vimeo</div>
+                  <div class="button-small-label">Dekstop App</div>
                 </div>
               </a>
             </li>
