--- a/index.html
+++ b/index.html
@@ -351,33 +351,33 @@
             </li>
 
             <li class="f-video f-youtube view">
-              <a href="http://www.youtube.com/watch?v=bJdZZfLqXDU" class="fancybox-media">
+              <img src="images/photocontent/portfolio_thumb_02.jpg" alt=""/>
+              <a href="https://www.youtube.com/watch?v=HK02IlGgYbw&t=463s" class="fancybox-media">
                 <div class="div-info">
                   <div class="thumb-icon-youtube"></div>
                   <div class="thumb-name">Title</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_02.jpg" alt=""/>
             </li>
 
             <li class="f-video f-youtube view">
+              <img src="images/photocontent/portfolio_thumb_04.jpg" alt=""/>
               <a href="http://www.youtube.com/watch?v=7_L_5vrHoWQ&amp;hd=1" class="fancybox-media">
                 <div class="div-info">
                   <div class="thumb-icon-youtube"></div>
                   <div class="thumb-name">Gnomeo & Juliet</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_04.jpg" alt=""/>
             </li>
 
             <li class="f-video f-vimeo view">
+              <img src="images/photocontent/portfolio_thumb_05.jpg" alt=""/>
               <a href="http://vimeo.com/51704432" class="fancybox-media" >
                 <div class="div-info">
                   <div class="thumb-icon-vimeo"></div>
                   <div class="thumb-name">When I Grow Up</div>
                 </div>
               </a>
-              <img src="images/photocontent/portfolio_thumb_05.jpg" alt=""/>
             </li>
 
           </ul><!-- /Portfolio Content -->
