--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -21,7 +21,7 @@
         <div id="content-wrapper">
             <!-- Logo Demo -->
             <a href="../index.html" id="demo-logo">
-                <img src="../images/demo-logo.png" alt="" />
+                <img src="../images/matahari.png" alt="" />
             </a><!-- /Logo Demo -->
             <!-- ABOUTME -->
             <div id="aboutme">
