--- a/index.html
+++ b/index.html
@@ -169,23 +169,23 @@
             <h2>My Skills</h2>
             <h3>Graphic Skills</h3>
             <ul class="skills">
-              <li class="skill">Photoshop<span class="skill-blue-star-5"></span></li>
-              <li class="skill">Illustrator<span class="skill-blue-star-3"></span></li>
+              <li class="skill">Photoshop<span class="skill-blue-star-4"></span></li>
+              <li class="skill">Illustrator<span class="skill-blue-star-2"></span></li>
               <li class="skill">CorelDraw<span class="skill-blue-star-4"></span></li>
-              <li class="skill">Corel Painter<span class="skill-blue-star-5"></span></li>
             </ul>
             <h3>Web Design</h3>
             <ul class="skills">
               <li class="skill">HTML+CSS<span class="skill-blue-fill-5"></span></li>
-              <li class="skill">Javascript<span class="skill-blue-fill-2"></span></li>
-              <li class="skill">Php<span class="skill-blue-fill-4"></span></li>
-              <li class="skill">HTML+CSS<span class="skill-blue-fill-5"></span></li>
+              <li class="skill">Javascript<span class="skill-blue-fill-3"></span></li>
+              <li class="skill">PHP<span class="skill-blue-fill-4"></span></li>
             </ul>
-            <h3>3 Styles of Skills</h3>
+            <h3>Programming</h3>
             <ul class="skills">
-              <li class="skill">Stars<span class="skill-blue-stroke-3"></span></li>
-              <li class="skill">Fill<span class="skill-blue-stroke-5"></span></li>
-              <li class="skill">Stroke<span class="skill-blue-stroke-4"></span></li>
+              <li class="skill">C++<span class="skill-blue-stroke-4"></span></li>
+              <li class="skill">Java<span class="skill-blue-stroke-3"></span></li>
+              <li class="skill">PHP<span class="skill-blue-stroke-4"></span></li>
+              <li class="skill">Python<span class="skill-blue-stroke-2"></span></li>
+              <li class="skill">Dart<span class="skill-blue-stroke-2"></span></li>
             </ul>
             <div class="paper-clip"></div>
           </div>
