--- a/index.html
+++ b/index.html
@@ -201,16 +201,18 @@
           <div class="substrate">
             <h2>Pendidikan</h2>
             <div class="left-blue">
-              <div class="time-period-left-blue"></div>
-              <h3><img src="images/logo_sd.png" alt=""></h3>
+              <!-- sd -->
+              <div class="time-period-left-blue"><img src="images/logo_sd.png" alt=""></div>
               <h4>SD Negeri 2 Jajaran Baru <span class="time-period-right-blue">2004 - 2009</span></h4>
               <div class="thumb-icon-gmap" style="margin-right:10px;"></div>
-              <p>Jajaran Baru I, Megang Sakti, Kabupaten Musi Rawas, Sumatera Selatan</p>
+              <p>Jajaran Baru I, Megang Sakti, Kabupaten Musi Rawas, Sumatera Selatan 31657.</p>
+              <!-- smp -->
+              <div class="time-period-left-blue"><img src="images/logo_smp.png" alt=""></div>
+              <h4>SMP N Megang Sakti<span class="time-period-right-blue">2010 - 2013</span></h4>
+              <div class="thumb-icon-gmap" style="margin-right:10px;"></div>
+              <p>Megang Sakti I, Megang Sakti, Kabupaten Musi Rawas, Sumatera Selatan 31657.</p>
               <div class="time-period-left-blue"></div>
-              <h3>SMP<span class="time-period-right-blue">2010 - 2013</span></h3>
-              <h4>Some information</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus amet ligula non lectus cursus egestas.</p>
-              <div class="time-period-left-blue"></div><!-- Keep empty. This class used for creating a point on the line. Use "time-period-right-***".-->
+
               <h3>Web Designer</h3>
               <h4>Some information</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
