add smk dan itera

--- a/index.html
+++ b/index.html
@@ -212,10 +212,18 @@
               <div class="thumb-icon-gmap" style="margin-right:10px;"></div>
               <p>Megang Sakti I, Megang Sakti, Kabupaten Musi Rawas, Sumatera Selatan 31657.</p>
               <div class="time-period-left-blue"></div>
+              <!-- SMK -->
+              <div class="time-period-left-blue"><img src="images/logo_smk.png" alt=""></div>
+              <h4>SMK N Lubuk Linggau<span class="time-period-right-blue">2013 - 2016</span></h4>
+              <div class="thumb-icon-gmap" style="margin-right:10px;"></div>
+              <p>Jl. Pioner No. 46 B Kel, Air Kuti, Majapahit, Lubuk Linggau Tim. I, Kota Lubuklinggau, Sumatera Selatan 31626</p>
+              <div class="time-period-left-blue"></div>
+              <!-- KULIAH -->
+              <div class="time-period-left-blue"><img src="images/logo_itera.png" alt=""></div>
+              <h4>Institut Teknologi Sumatera [ ITERA ]<br><span class="time-period-right-blue">2016 - Sekarang</span></h4>
+              <div class="thumb-icon-gmap" style="margin-right:10px;"></div>
+              <p>Jalan Terusan Ryacudu, Way Hui, Jati Agung, Way Huwi, Kec. Jati Agung, Kabupaten Lampung Selatan, Lampung 35365</p>
 
-              <h3>Web Designer</h3>
-              <h4>Some information</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
             </div>
           </div>
           <div class="substrate">
