hapus foto dan penambahan riwayat kerja

--- a/index.html
+++ b/index.html
@@ -227,19 +227,21 @@
             </div>
           </div>
           <div class="substrate">
-            <h2>Education. Second Variant.</h2>
+            <h2>Pengalaman Kerja</h2>
             <div class="left-blue">
-              <div class="time-period-left-blue">2012</div>
+              <div class="time-period-left-blue">2016</div>
               <div class="info-period">
-                <h3>Designer</h3>
-                <h4>School of Art and Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas.</p>
+                <h3>Teknisi [ Magang ]</h3>
+                <h4>Sigma Komputer - Lubuklinggau</h4>
+                <p>Kegiatan praktik kerja lapangan, yang dilakukan selama 3 ( tiga ) bulan.
+                  Berfokus pada perbaikan hardware dan software, serta jaringan komputer.</p>
               </div>
-              <div class="time-period-left-blue">2008 - 2012</div>
+              <div class="time-period-left-blue">2019</div>
               <div class="info-period">
-                <h3>Designer</h3>
-                <h4>School of Art</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h3>Web Developer [ Kerja Praktik ]</h3>
+                <h4>UPT TIK - Institut Teknologi Sumatera</h4>
+                <p>Kegiatan Kerja Praktik yang dilakukan selama 2 ( dua ) bulan.
+                Mengerjakan projek sebagai fullstack developer ITERA Career Center.</p>
               </div>
             </div>
           </div>
@@ -491,7 +493,6 @@
 
     </div><!-- /Main Content -->
   </div><!-- /Shadow -->
-
   <script src="js/jquery.hashchange.min.js"></script>
   <script src="js/jquery.flexslider-min.js"></script>
   <script src="js/jquery.easytabs.min.js"></script>
@@ -501,9 +502,5 @@
   <script src="js/gmap3.min.js"></script>
   <script src="js/contact.js"></script>
   <script src="js/settings.js"></script>
-
 </body>
-
-
-<!-- Mirrored from leta.artrow.net/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Sep 2019 09:25:48 GMT -->
 </html>
