--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -11,9 +11,14 @@
     <link rel="stylesheet" href="css/flexslider.css" media="screen">
     <link rel="stylesheet" href="css/fancybox-dark.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
+    <script src="js/modernizr.custom.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
+    <script>
+    if (window.location.hash.indexOf('#!') !== -1) window.location.hash = '';
+    </script>
 </head>
     <body>
         <audio><source src="../audio/sound.mp3"/></audio>
