tambah gis podomoro

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -311,6 +311,16 @@
                   </li>
 
                   <li class="f-photo view">
+                    <img src="../images/photocontent/portfolio_thumb_02.png" alt=""/>
+                    <a href="../images/photocontent/portfolio_02.png" class="fancybox" rel="group" title="GIS Podomoro PRINGSEWU">
+                      <div class="div-info">
+                        <div class="thumb-icon-globe"></div>
+                        <div class="thumb-name">GIS Podomoro PRINGSEWU</div>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="f-photo view">
                     <img src="../images/photocontent/portfolio_thumb_06.jpg" alt=""/>
                     <a href="../images/photocontent/portfolio_06.jpg" class="fancybox" rel="group" title="Comptech">
                       <div class="div-info">
