--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
   <link rel="stylesheet" href="css/main.css" media="screen">
   <link rel="stylesheet" href="css/flexslider.css" media="screen">
   <link rel="stylesheet" href="css/fancybox-light.css" media="screen">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
 
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/jquery.isotope.min.js"></script>
   <script src="js/modernizr.custom.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+
+  <script>
+  function initialize() {
+    var propertiPeta = {
+      center:new google.maps.LatLng(-2.987731,103.025159),
+      zoom:9,
+      mapTypeId:google.maps.MapTypeID.ROADMAP
+    };
+
+    var peta = new google.maps.Map(document.getElementById("googleMap"), propertiPeta);
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+
+  </script>
+
   <script>
   if (window.location.hash.indexOf('#!') !== -1) window.location.hash = '';
   </script>
@@ -304,8 +322,18 @@
               <img src="images/photocontent/portfolio_thumb_01.jpg" alt="">
               <a href="images/photocontent/portfolio_01.jpg" class="fancybox" rel="group" title="Siranap">
                 <div class="div-info">
-                  <div class="thumb-icon-photo"></div>
+                  <div class="thumb-icon-photo">web</div>
                   <div class="thumb-name">Sistem informasi rawat inap</div>
+                </div>
+              </a>
+            </li>
+
+            <li class="f-photo view">
+              <img src="images/photocontent/portfolio_thumb_02.png" alt=""/>
+              <a href="images/photocontent/portfolio_02.png" class="fancybox" rel="group" title="GIS Podomoro PRINGSEWU">
+                <div class="div-info">
+                  <div class="thumb-icon-globe"></div>
+                  <div class="thumb-name">GIS Podomoro PRINGSEWU</div>
                 </div>
               </a>
             </li>
@@ -441,6 +469,9 @@
         <div class="right-column">
           <div class="substrate">
             <h2>My Location</h2>
+            <div id="googleMap" style="width:100%; height:380px;">
+
+            </div>
             <div id="map"></div><!-- GMAP -->
             <div class="map-pan">
               <div class="div-info pan pan-active" data-lat="-2.987731" data-lng="103.025159">
