--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <img src="images/photocontent/portfolio_thumb_01.jpg" alt="">
               <a href="images/photocontent/portfolio_01.jpg" class="fancybox" rel="group" title="Siranap">
                 <div class="div-info">
-                  <div class="thumb-icon-photo">web</div>
+                  <div class="thumb-icon-photo"></div>
                   <div class="thumb-name">Sistem informasi rawat inap</div>
                 </div>
               </a>
@@ -332,7 +332,7 @@
               <img src="images/photocontent/portfolio_thumb_02.png" alt=""/>
               <a href="images/photocontent/portfolio_02.png" class="fancybox" rel="group" title="GIS Podomoro PRINGSEWU">
                 <div class="div-info">
-                  <div class="thumb-icon-globe"></div>
+                  <div class="thumb-icon-photo"></div>
                   <div class="thumb-name">GIS Podomoro PRINGSEWU</div>
                 </div>
               </a>
