--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -314,7 +314,7 @@
                     <img src="../images/photocontent/portfolio_thumb_02.png" alt=""/>
                     <a href="../images/photocontent/portfolio_02.png" class="fancybox" rel="group" title="GIS Podomoro PRINGSEWU">
                       <div class="div-info">
-                        <div class="thumb-icon-globe"></div>
+                        <div class="thumb-icon-photo"></div>
                         <div class="thumb-name">GIS Podomoro PRINGSEWU</div>
                       </div>
                     </a>
