--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="about-wrapper">
           <div class="title">
             <h1>Taufik Agung Santoso</h1>
-            <h5>INFORMATIC ENGINEERING</h5>
+            <h5>FullStack Developer @Bukit Asam Medika</h5>
           </div>
           <div class="info-slider">
             <div class="info-slide-list">
@@ -78,7 +78,7 @@
                 <div class="info-slide-item">
                   <div class="top-border-red">
                     <p>السَّلاَمُ عَلَيْكُمْ وَرَحْمَةُ اللهِ وَبَرَكَاتُهُ, perkenalkan nama saya Taufik Agung Santoso.<br>
-                    saya adalah seorang mahasiswa Teknik Informatika Institut Teknologi Sumatera.
+                    Saat ini saya bekerja di Bukit Asam Medika Sebagai Fullstack Developer.
                     </p>
                   </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="right-column">
                       <ul class="main-info-list">
-                        <li>HP<span>+62 853 5703 7093</span></li>
+                        <li>HP<span>+62 851 5923 3917</span></li>
                       </ul>
                     </div>
 
@@ -179,7 +179,7 @@
               <li>Name<span>Taufik Agung Santoso</span><div class="floatlimit"></div></li>
               <li>TTL<span>Jajaran Baru 17 Maret 1998</span><div class="floatlimit"></div></li>
               <li>Alamat<span>Jajaran Baru Musi Rawas, Indonesia</span><div class="floatlimit"></div></li>
-              <li>HP<span>+62 853 5703 7093</span><div class="floatlimit"></div></li>
+              <li>HP<span>+62 851 5923 3917</span><div class="floatlimit"></div></li>
             </ul>
             <div class="paper-clip"></div>
           </div>
